# fastapi-do-zero

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
fastapi_do_zero/: app.py  database.py  security.py  settings.py
fastapi_do_zero/crud/: base.py  task.py  user.py
fastapi_do_zero/database/: init_session.py  models.py
fastapi_do_zero/helpers/: deps.py  security.py  settings.py
fastapi_do_zero/models/: _base.py  user.py
fastapi_do_zero/routes/: __init__.py  auth.py  task.py  user.py
fastapi_do_zero/schemas/: __init__.py  task.py  user.py
migrations/: env.py
migrations/versions/: be7f51b6c65d_feat_tabela_de_tasks.py  ea6cbe2e728c_feat_create_users_table.py
scripts/: entrypoint.sh
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_task.py  test_user.py
